Ulterior BF. Now prepare_dataset.py works

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 dist/
 Oracle_utils/__pycache__/
 Oracle.egg-info/
+myRecords/__pycache__/
+sample_data/datasets/
+sample_data/datasets/29
+sample_data/datasets/48
+sample_data/datasets/70
+sample_data/datasets/A0
+sample_data/datasets/A5
+sample_data/datasets/BD
+sample_data/datasets/C5
+sample_data/datasets/ED
